Find Fmt library and link only its headers during Cmake compilation on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,3 +62,9 @@ endif()
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   include(cmake/package.cmake OPTIONAL)
 endif()
+
+if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+  if (Fmt_FOUND)
+    target_link_libraries(${PROJECT_NAME} fmt::fmt-header-only)
+  endif()
+endif()
