BRAINSTORM-1320: Fail 'make test' if any of the tests fail

--- a/test/Makefile
+++ b/test/Makefile
@@ -35,8 +35,10 @@ clean:
 test: $(PROG)
 	@echo Running tests:
 	@for prog in $(PROG); do \
-	./$$prog; \
+	  /bin/bash -o pipefail -c "./$$prog | tee $$prog.out" || touch $$prog.err ; \
 	done
+	@test `find . -name \*.err | wc -l` = "0" || ( echo ; echo "The following tests have errors:" ; \
+		for i in *.err ; do echo `basename $$i .err`; done ; rm -f *.err ; false ) 
 
 $(PROG) : % : %.cpp ../libsmartmet-newbase.so
 	$(CC) $(CFLAGS) -o $@ $@.cpp $(INCLUDES) $(LIBS)
