--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,13 @@
 PROG = $(patsubst %.cpp,%,$(wildcard *Test.cpp))
 
-MAINFLAGS = -std=c++11 -Wall -W -Wno-unused-parameter
+FLAGS = -std=c++11 -Wall -W -Wno-unused-parameter
+
+ifeq ($(TSAN), yes)
+  FLAGS += -fsanitize=thread
+endif
+ifeq ($(ASAN), yes)
+  FLAGS += -fsanitize=address -fsanitize=pointer-compare -fsanitize=pointer-subtract -fsanitize=undefined -fsanitize-address-use-after-scope
+endif
 
 EXTRAFLAGS = -Werror -pedantic -Wpointer-arith -Wcast-qual \
 	-Wcast-align -Wwrite-strings -Wconversion -Winline \
@@ -11,7 +18,7 @@ EXTRAFLAGS = -Werror -pedantic -Wpointer-arith -Wcast-qual \
 DIFFICULTFLAGS = -Weffc++ -Wunreachable-code -Wredundant-decls
 
 CC = g++
-CFLAGS = -DUNIX -O0 -g $(MAINFLAGS)
+CFLAGS = -DUNIX -O0 -g $(FLAGS)
 
 INCLUDES = \
 	-I ../newbase \
@@ -20,7 +27,6 @@ INCLUDES = \
 
 LIBS =  ../libsmartmet-newbase.so \
 	-lboost_date_time \
-	-lboost_regex \
 	-lboost_filesystem \
 	-lboost_iostreams \
 	-lboost_thread \
