Added ftm and dgal libraries to include list

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ target_include_directories(
     ${PROJECT_NAME}
     PUBLIC ${PROJECT_SOURCE_DIR}/newbase
     PUBLIC ${BOOST_INCLUDE_DIR} 
+    PUBLIC ${fmt_SOURCE_DIR}
+    PUBLIC ${GDAL_INCLUDE_DIR} 
     )
 
 set(
@@ -23,6 +25,8 @@ set(
     ${PROJECT_SOURCE_DIR}/newbase
     ${PROJECT_SOURCE_DIR}
     ${BOOST_INCLUDE_DIR} 
+    ${fmt_SOURCE_DIR}
+    ${GDAL_INCLUDE_DIR} 
     CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE
     )
 
