Use C++ standard (-std=...) from $HOME/.smartmet.mk when provided (defaults to c++11 otherwise)

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -4,12 +4,16 @@ SRCS = $(wildcard *.cpp)
 OBJS = $(SRCS:%.cpp=%.o)
 PROGS = $(SRCS:%.cpp=%)
 
+-include $(HOME)/.smartmet.mk
+GCC_DIAG_COLOR ?= always
+CXX_STD ?= c++11
+
 # The rules
 
 all: $(PROGS)
 
 $(PROGS): % : %.cpp
-	g++ -DUNIX -Wall -g -O0 -o $@ $@.cpp -I ../include -L .. -lnewbase
+	g++ -std=$(CXX_STD) -DUNIX -Wall -g -O0 -o $@ $@.cpp -I ../include -L .. -lnewbase
 
 clean:
 	rm -f $(PROGS) $(OBJS) *~
