--- a/test/Makefile
+++ b/test/Makefile
@@ -1,6 +1,10 @@
 PROG = $(patsubst %.cpp,%,$(wildcard *Test.cpp))
 
-FLAGS = -std=c++11 -Wall -W -Wno-unused-parameter
+-include $(HOME)/.smartmet.mk
+GCC_DIAG_COLOR ?= always
+CXX_STD ?= c++11
+
+FLAGS = -std=$(CXX_STD) -Wall -W -Wno-unused-parameter
 
 ifeq ($(TSAN), yes)
   FLAGS += -fsanitize=thread
