--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,9 @@
 version: 2
 jobs:
   build:
+    branches:
+      only:
+        -master
     docker:
       - image: fmidev/smartmet-cibase:latest
     steps:
