--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,10 +38,11 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      branches:
-        only:
-          -master
       - build
+        filters:
+          branches:
+            only:
+              -master
       - test:
           requires:
             - build
