--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,9 +36,13 @@ jobs:
 
 workflows:
   version: 2
-  build_and_test:
+  build-test:
     jobs:
       - build
+          filters:
+            branches:
+              only:
+                -master
       - test:
           requires:
             - build
