--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ workflows:
   version: 2
   build-test:
     jobs:
-      - build
+      - build:
           filters:
             branches:
               only:
