--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,8 +41,7 @@ workflows:
       - build:
           filters:
             branches:
-              only:
-                -master
+              only: master
       - test:
           requires:
             - build
