--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,10 +38,10 @@ workflows:
   version: 2
   build-test:
     jobs:
-      - build:
+      - build::
           filters:
             branches:
               only: master
       - test:
           requires:
-            - build
+            - build:
