--- a/test/Makefile
+++ b/test/Makefile
@@ -24,8 +24,7 @@ LIBS +=  ../libsmartmet-newbase.so \
 	-lboost_iostreams \
 	-lboost_thread \
 	-lboost_system \
-	-lgdal \
-	-L/usr/pgsql-9.5/lib -l:libpq.so.5 \
+	$(REQUIRED_LIBS) \
 	-lpthread -lz -lbz2 -lrt
 
 all: $(PROG)
