--- a/test/Makefile
+++ b/test/Makefile
@@ -1,5 +1,7 @@
 PROG = $(patsubst %.cpp,%,$(wildcard *Test.cpp))
 
+REQUIRES = gdal
+
 include $(shell echo $${PREFIX-/usr})/share/smartmet/devel/makefile.inc
 
 FLAGS = -std=$(CXX_STD) -Wall -W -Wno-unused-parameter
