Added support for Fmi::Exception usage

--- a/test/Makefile
+++ b/test/Makefile
@@ -21,6 +21,7 @@ INCLUDES += \
 	-I.
 
 LIBS +=  ../libsmartmet-newbase.so \
+	-lsmartmet-macgyver \
 	-lboost_date_time \
 	-lboost_filesystem \
 	-lboost_iostreams \
