--- a/test/Makefile
+++ b/test/Makefile
@@ -20,13 +20,14 @@ INCLUDES += \
 	-I/usr/include/smartmet \
 	-I.
 
-LIBS +=  ../libsmartmet-newbase.so \
+LIBS +=  \
+     ../libsmartmet-newbase.so \
+	$(PREFIX_LDFLAGS) \
 	-lsmartmet-macgyver \
 	-lboost_iostreams \
 	-lboost_thread \
 	-lboost_system \
 	$(REQUIRED_LIBS) \
-	$(PREFIX_LDFLAGS) \
 	-lz -lbz2 \
 	-lpthread -lrt
 
